--- a/main.css
+++ b/main.css
@@ -9,6 +9,10 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: sticky;
+    background-color: #fff;
+    top: 0;
+    z-index: 1;
 }
 
 .header__logo {
@@ -37,6 +41,12 @@ button {
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
 }
+
+button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: background-color 0.3s ease-in;
+ }
 
 .about__image {
     width: 500px;
@@ -112,53 +122,34 @@ button {
     display: flex;
     flex-direction: column;
     text-align: left;
+}
+
+.form form {
+    margin-top: 60px;
     display: grid;
     grid-gap: 20px;
-    margin-top: 60px;
-}
+ }
 
 .form label {
     font-size: 18px;
     font-weight: 600;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-.form input {
+.form input, .form select {
+    border: none;
+    border-radius: 15px;
+    padding: 0 20px;
+    outline: none;
     font-size: 18px;
     color: #213053;
     height: 60px;
-    padding: 0px 20px;
-    border-radius: 15px;
-    border: none;
-}
-
-.form select {
-    font-size: 18px;
-    color: #213053;
-    height: 60px;
-    padding: 0px 20px;
-    border-radius: 15px;
-    border: none;
-}
+ }
 
 .form__submit {
     font-size: 18px;
     font-weight: 600;
     margin-top: 40px;
-}
-
-select {
-    appearance: none;
-}
-
-input {
-    outline: none;
-}
-
-.form__submit:hover {
-    background-color: #f6980c;
-    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-    transition: background-color 0.3s ease-in;
 }
 
 footer {
@@ -169,9 +160,7 @@ footer {
 
 .footer__container {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    align-self: center;
 }
 
 .footer__copyright {
@@ -198,3 +187,89 @@ footer {
 .footer__links a {
     margin-bottom: 15px;
 }
+
+@keyframes rotation {
+    0% { transform: rotate(0); }
+    100% { transform: rotate(360deg); }
+}
+
+.about__sun-image {
+    width: 100px;
+    height: 100px;
+    animation: rotation 10s infinite linear;
+    position: absolute;
+}
+
+/* Планшеты */
+/*
+@media (max-width: 1024px) {
+    .about {
+        padding: 115px 20px;
+    }
+  
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+  
+    .about__image {
+        width: 280px;
+    }
+  
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+ }
+  
+ /* Мобильные устройства */
+ /*
+ @media (max-width: 720px) {
+    header {
+        padding: 10px;
+    }
+  
+    .header__logo {
+        height: 20px;
+    }
+  
+    header a {
+        margin-right: 10px;
+    }
+  
+    .about {
+        flex-direction: column-reverse;
+        padding: 50px 10px;
+    }
+  
+    .about h1 {
+        font-size: 36px;
+        line-height: 40px;
+    }
+  
+    .about__image {
+        width: 280px;
+    }
+  
+    .about__sun-image {
+        width: 75px;
+        height: 75px;
+    }
+  
+    .form {
+        padding: 50px 10px;
+    }
+  
+    .form h1 {
+        font-size: 36px;
+    }
+  
+    footer {
+        padding: 50px 10px;
+    }
+  
+    .footer__container {
+        flex-direction: column;
+    }
+ }
+*/
