--- a/main.css
+++ b/main.css
@@ -472,3 +472,14 @@ footer {
         height: 500px;
     }
 }
+
+.about {
+    position: relative;
+ }
+ 
+ .orb-canvas {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    right: 0;
+ }
